bdr.BDR.scala.error
Compilation error:
BDR:28: error: type mismatch;
 found   : Char('Z')
 required: String
  else if (message='Z') {
                   ^BDR:28: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message='Z') {
                  ^BDR:33: error: type mismatch;
 found   : Char('Y')
 required: String
  else if (message='Y') {
                   ^BDR:33: error: type mismatch;
 found   : Unit
 required: Boolean
  else if (message='Y') {
                  ^