bdr.BDR.scala.code
while (isOverMessage()) {
  var message=readMessage();
	if (message=='R') {
    right();
    forward();
  }
  else if (message=='L') {
    left();
    forward();
  }
  else if (message=='I') {
    right();
    right();
    forward();
  }
  else if (message=='A') {
    forward();
  }
  else if (message=='B') {
    forward();
    forward();
  }
  else if (message=='C') {
    forward();
    forward();
    forward();
  }
  else if (message='Z') {
    backward();
    backward();
    backward();
  }
  else if (message='Y') {
    backward();
    backward();
  }
  else if (message=='X') {
    backward();
  }
}